<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:app2="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.sakurafish.pockettoushituryou.viewmodel.FoodViewModel" />
    </data>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/space_12dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app2:cardUseCompatPadding="true"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:id="@+id/expand_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{viewModel::onClickExpandButton}"
            android:onLongClick="@{viewModel::onLongClickExpandButton}"
            android:orientation="vertical">

            <TextView
                android:id="@+id/food_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/space_12dp"
                android:layout_marginTop="@dimen/space_12dp"
                android:layout_toLeftOf="@+id/expand_arrow"
                android:text="@{viewModel.name}"
                android:textSize="@dimen/text_20sp"
                app:foodTextColor="@{viewModel.carboRatedColorResId}" />

            <TextView
                android:id="@+id/carbohydrate_per_100g"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/food_name"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/food_name"
                android:layout_marginBottom="@dimen/space_12dp"
                android:layout_marginLeft="@dimen/space_12dp"
                android:layout_marginTop="@dimen/space_8dp"
                android:text="@{viewModel.carbohydrate_per_100g}"
                android:textSize="@dimen/text_28sp"
                android:textStyle="bold"
                app:foodTextColor="@{viewModel.carboRatedColorResId}" />

            <TextView
                android:id="@+id/carbohydrate_exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/carbohydrate_per_100g"
                android:layout_marginLeft="@dimen/space_4dp"
                android:layout_toRightOf="@+id/carbohydrate_per_100g"
                android:paddingBottom="@dimen/space_12dp"
                android:text="@string/carbohydrate_exp"
                android:textSize="@dimen/text_12sp" />

            <ImageView
                android:id="@+id/expand_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="@dimen/space_12dp"
                android:layout_marginRight="@dimen/space_12dp"
                android:layout_marginTop="@dimen/space_32dp"
                app:srcCompat="@drawable/expand_arrow" />

            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/expandable_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/carbohydrate_exp"
                android:background="@color/grey50"
                app:el_duration="300"
                app:el_expanded="false"
                app:el_parallax="0.5">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/expanded_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="@dimen/space_12dp"
                        android:layout_marginRight="@dimen/space_12dp"
                        android:layout_marginTop="@dimen/space_12dp"
                        android:gravity="center"
                        android:text="@{viewModel.expanded_title}"
                        android:textColor="@color/black_alpha_87"
                        android:textSize="@dimen/text_14sp" />

                    <TextView
                        android:id="@+id/carbohydrate_per_weight_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/expanded_title"
                        android:layout_below="@+id/expanded_title"
                        android:layout_marginTop="@dimen/space_4dp"
                        android:text="@string/carbohydrate_per_weight_title"
                        android:textColor="@color/black_alpha_87"
                        android:textSize="@dimen/text_14sp" />

                    <TextView
                        android:id="@+id/carbohydrate_per_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/carbohydrate_per_weight_title"
                        android:layout_marginRight="@dimen/space_4dp"
                        android:layout_toRightOf="@+id/carbohydrate_per_weight_title"
                        android:text="@{viewModel.carbohydrate_per_weight}"
                        android:textColor="@color/black_alpha_87"
                        android:textSize="@dimen/text_14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/calory_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/expanded_title"
                        android:layout_below="@+id/carbohydrate_per_weight_title"
                        android:text="@string/calory_title"
                        android:textColor="@color/black_alpha_87"
                        android:textSize="@dimen/text_14sp" />

                    <TextView
                        android:id="@+id/calory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/calory_title"
                        android:layout_marginLeft="@dimen/space_4dp"
                        android:layout_toRightOf="@+id/calory_title"
                        android:text="@{viewModel.calory}"
                        android:textColor="@color/black_alpha_87"
                        android:textSize="@dimen/text_14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/protein_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/expanded_title"
                        android:layout_below="@+id/calory_title"
                        android:text="@string/protein_title"
                        android:textColor="@color/black_alpha_87"
                        android:textSize="@dimen/text_14sp" />

                    <TextView
                        android:id="@+id/protein"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/protein_title"
                        android:layout_marginRight="@dimen/space_4dp"
                        android:layout_toRightOf="@+id/protein_title"
                        android:text="@{viewModel.protein}"
                        android:textColor="@color/black_alpha_87"
                        android:textSize="@dimen/text_14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/fat_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/expanded_title"
                        android:layout_below="@+id/protein_title"
                        android:text="@string/fat_title"
                        android:textColor="@color/black_alpha_87"
                        android:textSize="@dimen/text_14sp" />

                    <TextView
                        android:id="@+id/fat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/fat_title"
                        android:layout_marginRight="@dimen/space_4dp"
                        android:layout_toRightOf="@+id/fat_title"
                        android:text="@{viewModel.fat}"
                        android:textColor="@color/black_alpha_87"
                        android:textSize="@dimen/text_14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sodium_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/expanded_title"
                        android:layout_below="@+id/fat_title"
                        android:text="@string/sodium_title"
                        android:textColor="@color/black_alpha_87"
                        android:textSize="@dimen/text_14sp" />

                    <TextView
                        android:id="@+id/sodium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/sodium_title"
                        android:layout_marginRight="@dimen/space_4dp"
                        android:layout_toRightOf="@+id/sodium_title"
                        android:text="@{viewModel.sodium}"
                        android:textColor="@color/black_alpha_87"
                        android:textSize="@dimen/text_14sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/share_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/star_button"
                        android:layout_marginBottom="@dimen/space_8dp"
                        android:layout_marginRight="@dimen/space_8dp"
                        android:layout_toLeftOf="@+id/star_button"
                        android:onClick="@{viewModel::onClickShareButton}"
                        android:tint="@color/grey600"
                        app:srcCompat="@drawable/ic_share_black_24dp" />

                    <com.like.LikeButton
                        android:id="@+id/star_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/sodium_title"
                        android:layout_marginBottom="@dimen/space_8dp"
                        android:layout_marginRight="@dimen/space_8dp"
                        app:anim_scale_factor="2.5"
                        app:icon_size="17dp"
                        app:icon_type="heart" />
                </RelativeLayout>

            </net.cachapa.expandablelayout.ExpandableLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</layout>
